--- a/Content/Site.css
+++ b/Content/Site.css
@@ -2,6 +2,7 @@
 body {
     padding-top: 50px;
     padding-bottom: 20px;
+    background-color: #C0C0C0;
 }
 
 /* Wrapping element */
@@ -9,6 +10,10 @@ body {
 .body-content {
     padding-left: 15px;
     padding-right: 15px;
+}
+
+.navbar-custom {
+    background: #800000;
 }
 
 /* Set widths on the form inputs since otherwise they're 100% wide */
@@ -28,4 +33,11 @@ textarea {
     .body-content {
         padding: 0;
     }
+}
+
+.button-custom {
+    background-color: gray;
+    border-radius: 10px;
+    margin: 0px auto !important; 
+    display: block;
 }
