--- a/Content/Site.css
+++ b/Content/Site.css
@@ -40,6 +40,7 @@ textarea {
     border-radius: 10px;
     margin: 0px auto !important; 
     display: block;
+    color: white;
 }
 
 .content-custom {
