Changed the layout for start order page.

--- a/Content/Site.css
+++ b/Content/Site.css
@@ -64,6 +64,15 @@ textarea {
     text-align: center;
 }
 
+.set-flex {
+    display: flex !important;
+}
+
+.column-width {
+    max-width: 600px;
+    margin: 0 auto;
+}
+
 .font-custom {
     font-family: "Felix Titling";
 }
