--- a/Site.Master
+++ b/Site.Master
@@ -46,7 +46,7 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" runat="server" href="~/">Madison Pizzeria</a>
+                    <a class="navbar-brand font-custom" runat="server" href="~/">Madison Pizzeria</a>
                 </div>
                 <div class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
